// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebAudioSynth808 DSP > Boom (sub osc) 1`] = `
[
  "osc#3.frequency.setValueAtTime(130.812783,1)",
  "osc#3.frequency.exponentialRampToValueAtTime(65.406391,1.2)",
  "gain#5.gain.setValueAtTime(1,1)",
  "gain#5.gain.exponentialRampToValueAtTime(0.0001,4)",
  "osc#3.connect(shaper#4)",
  "shaper#4.connect(gain#5)",
  "gain#5.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(4.05)",
  "gain#7.gain.setValueAtTime(0.2,1)",
  "bufsrc#6.connect(gain#7)",
  "gain#7.connect(gain#1)",
  "bufsrc#6.start(1)",
  "osc#8.frequency.value=32.703196",
  "gain#9.gain.setValueAtTime(0.5,1)",
  "gain#9.gain.exponentialRampToValueAtTime(0.0001,4)",
  "osc#8.connect(gain#9)",
  "gain#9.connect(biquad#2)",
  "osc#8.start(1)",
  "osc#8.stop(4.05)",
]
`;

exports[`WebAudioSynth808 DSP > Default (click) 1`] = `
[
  "osc#3.frequency.setValueAtTime(261.625565,1)",
  "osc#3.frequency.exponentialRampToValueAtTime(65.406391,1.1)",
  "gain#5.gain.setValueAtTime(1,1)",
  "gain#5.gain.exponentialRampToValueAtTime(0.0001,1.8)",
  "osc#3.connect(shaper#4)",
  "shaper#4.connect(gain#5)",
  "gain#5.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(1.85)",
  "gain#7.gain.setValueAtTime(0.4,1)",
  "bufsrc#6.connect(gain#7)",
  "gain#7.connect(gain#1)",
  "bufsrc#6.start(1)",
]
`;

exports[`WebAudioSynth808 DSP > Dirty (distortion) 1`] = `
[
  "osc#3.frequency.setValueAtTime(261.625565,1)",
  "osc#3.frequency.exponentialRampToValueAtTime(65.406391,1.1)",
  "gain#5.gain.setValueAtTime(1,1)",
  "gain#5.gain.exponentialRampToValueAtTime(0.0001,1.7)",
  "osc#3.connect(shaper#4)",
  "shaper#4.connect(gain#5)",
  "gain#5.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(1.75)",
  "gain#7.gain.setValueAtTime(0.4,1)",
  "bufsrc#6.connect(gain#7)",
  "gain#7.connect(gain#1)",
  "bufsrc#6.start(1)",
]
`;

exports[`WebAudioSynth808 DSP > Trap (click + sub) 1`] = `
[
  "osc#3.frequency.setValueAtTime(523.251131,1)",
  "osc#3.frequency.exponentialRampToValueAtTime(65.406391,1.04)",
  "gain#5.gain.setValueAtTime(1,1)",
  "gain#5.gain.exponentialRampToValueAtTime(0.0001,1.6)",
  "osc#3.connect(shaper#4)",
  "shaper#4.connect(gain#5)",
  "gain#5.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(1.65)",
  "gain#7.gain.setValueAtTime(0.8,1)",
  "bufsrc#6.connect(gain#7)",
  "gain#7.connect(gain#1)",
  "bufsrc#6.start(1)",
  "osc#8.frequency.value=32.703196",
  "gain#9.gain.setValueAtTime(0.2,1)",
  "gain#9.gain.exponentialRampToValueAtTime(0.0001,1.6)",
  "osc#8.connect(gain#9)",
  "gain#9.connect(biquad#2)",
  "osc#8.start(1)",
  "osc#8.stop(1.65)",
]
`;

exports[`WebAudioSynthAcid DSP > Default (accent) 1`] = `
[
  "biquad#3.Q.value=18",
  "biquad#3.frequency.setValueAtTime(600,1)",
  "biquad#3.frequency.linearRampToValueAtTime(2760,1.005)",
  "biquad#3.frequency.exponentialRampToValueAtTime(600,1.255)",
  "gain#4.gain.setValueAtTime(0.0001,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.005)",
  "gain#4.gain.setValueAtTime(1,1.35)",
  "gain#4.gain.exponentialRampToValueAtTime(0.0001,1.4)",
  "osc#5.detune.value=0",
  "osc#5.frequency.setValueAtTime(65.406391,1)",
  "osc#5.connect(shaper#2)",
  "osc#5.start(1)",
  "osc#5.stop(1.41)",
  "shaper#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
]
`;

exports[`WebAudioSynthAcid DSP > Default (no accent) 1`] = `
[
  "biquad#3.Q.value=18",
  "biquad#3.frequency.setValueAtTime(600,1)",
  "biquad#3.frequency.linearRampToValueAtTime(2040,1.005)",
  "biquad#3.frequency.exponentialRampToValueAtTime(600,1.255)",
  "gain#4.gain.setValueAtTime(0.0001,1)",
  "gain#4.gain.linearRampToValueAtTime(0.65,1.005)",
  "gain#4.gain.setValueAtTime(0.65,1.35)",
  "gain#4.gain.exponentialRampToValueAtTime(0.0001,1.4)",
  "osc#5.detune.value=0",
  "osc#5.frequency.setValueAtTime(65.406391,1)",
  "osc#5.connect(shaper#2)",
  "osc#5.start(1)",
  "osc#5.stop(1.41)",
  "shaper#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
]
`;

exports[`WebAudioSynthAcid DSP > Fat (unison) 1`] = `
[
  "biquad#3.Q.value=14",
  "biquad#3.frequency.setValueAtTime(500,1)",
  "biquad#3.frequency.linearRampToValueAtTime(2000,1.005)",
  "biquad#3.frequency.exponentialRampToValueAtTime(500,1.305)",
  "gain#4.gain.setValueAtTime(0.0001,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.005)",
  "gain#4.gain.setValueAtTime(1,1.35)",
  "gain#4.gain.exponentialRampToValueAtTime(0.0001,1.4)",
  "osc#5.detune.value=-15",
  "osc#5.frequency.setValueAtTime(65.406391,1)",
  "gain#6.gain.value=0.333333",
  "osc#5.connect(gain#6)",
  "gain#6.connect(shaper#2)",
  "osc#5.start(1)",
  "osc#5.stop(1.41)",
  "osc#7.detune.value=0",
  "osc#7.frequency.setValueAtTime(65.406391,1)",
  "gain#8.gain.value=0.333333",
  "osc#7.connect(gain#8)",
  "gain#8.connect(shaper#2)",
  "osc#7.start(1)",
  "osc#7.stop(1.41)",
  "osc#9.detune.value=15",
  "osc#9.frequency.setValueAtTime(65.406391,1)",
  "gain#10.gain.value=0.333333",
  "osc#9.connect(gain#10)",
  "gain#10.connect(shaper#2)",
  "osc#9.start(1)",
  "osc#9.stop(1.41)",
  "shaper#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
]
`;

exports[`WebAudioSynthAcid DSP > Hoover (unison + portamento, second note) 1`] = `
[
  "biquad#14.Q.value=10",
  "biquad#14.frequency.setValueAtTime(600,2)",
  "biquad#14.frequency.linearRampToValueAtTime(1800,2.01)",
  "biquad#14.frequency.exponentialRampToValueAtTime(600,2.41)",
  "gain#15.gain.setValueAtTime(0.0001,2)",
  "gain#15.gain.linearRampToValueAtTime(0.65,2.01)",
  "gain#15.gain.setValueAtTime(0.65,2.35)",
  "gain#15.gain.exponentialRampToValueAtTime(0.0001,2.4)",
  "osc#16.detune.value=-30",
  "osc#16.frequency.setValueAtTime(48.999429,2)",
  "osc#16.frequency.exponentialRampToValueAtTime(65.406391,2.08)",
  "gain#17.gain.value=0.25",
  "osc#16.connect(gain#17)",
  "gain#17.connect(shaper#13)",
  "osc#16.start(2)",
  "osc#16.stop(2.41)",
  "osc#18.detune.value=-10",
  "osc#18.frequency.setValueAtTime(48.999429,2)",
  "osc#18.frequency.exponentialRampToValueAtTime(65.406391,2.08)",
  "gain#19.gain.value=0.25",
  "osc#18.connect(gain#19)",
  "gain#19.connect(shaper#13)",
  "osc#18.start(2)",
  "osc#18.stop(2.41)",
  "osc#20.detune.value=10",
  "osc#20.frequency.setValueAtTime(48.999429,2)",
  "osc#20.frequency.exponentialRampToValueAtTime(65.406391,2.08)",
  "gain#21.gain.value=0.25",
  "osc#20.connect(gain#21)",
  "gain#21.connect(shaper#13)",
  "osc#20.start(2)",
  "osc#20.stop(2.41)",
  "osc#22.detune.value=30",
  "osc#22.frequency.setValueAtTime(48.999429,2)",
  "osc#22.frequency.exponentialRampToValueAtTime(65.406391,2.08)",
  "gain#23.gain.value=0.25",
  "osc#22.connect(gain#23)",
  "gain#23.connect(shaper#13)",
  "osc#22.start(2)",
  "osc#22.stop(2.41)",
  "shaper#13.connect(biquad#14)",
  "biquad#14.connect(gain#15)",
  "gain#15.connect(gain#1)",
]
`;

exports[`WebAudioSynthAcid DSP > filter LFO active 1`] = `
[
  "biquad#3.Q.value=18",
  "biquad#3.frequency.setValueAtTime(3476.043587,1)",
  "biquad#3.frequency.linearRampToValueAtTime(11818.548197,1.005)",
  "biquad#3.frequency.exponentialRampToValueAtTime(3476.043587,1.255)",
  "gain#4.gain.setValueAtTime(0.0001,1)",
  "gain#4.gain.linearRampToValueAtTime(0.65,1.005)",
  "gain#4.gain.setValueAtTime(0.65,1.35)",
  "gain#4.gain.exponentialRampToValueAtTime(0.0001,1.4)",
  "osc#5.detune.value=0",
  "osc#5.frequency.setValueAtTime(65.406391,1)",
  "osc#5.connect(shaper#2)",
  "osc#5.start(1)",
  "osc#5.stop(1.41)",
  "shaper#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
]
`;

exports[`WebAudioSynthMono DSP > Bass (sub osc) 1`] = `
[
  "gain#2.gain.value=1",
  "osc#5.detune.value=0",
  "osc#5.frequency.value=65.406391",
  "osc#5.connect(gain#2)",
  "osc#5.start(1)",
  "osc#5.stop(1.9)",
  "osc#6.frequency.value=32.703196",
  "gain#7.gain.value=0.4",
  "osc#6.connect(gain#7)",
  "gain#7.connect(gain#4)",
  "osc#6.start(1)",
  "osc#6.stop(1.9)",
  "biquad#3.Q.value=6",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.01)",
  "gain#4.gain.linearRampToValueAtTime(0.6,1.31)",
  "gain#4.gain.setValueAtTime(0.6,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,1.8)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
  "biquad#3.frequency.setValueAtTime(400,1)",
  "biquad#3.frequency.linearRampToValueAtTime(3200,1.01)",
  "biquad#3.frequency.linearRampToValueAtTime(400,1.31)",
  "biquad#3.frequency.setValueAtTime(400,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(400,1.8)",
]
`;

exports[`WebAudioSynthMono DSP > Cello (portamento, second note) 1`] = `
[
  "gain#11.gain.value=0.707107",
  "osc#14.detune.value=-4",
  "osc#14.frequency.setValueAtTime(195.997718,2)",
  "osc#14.frequency.linearRampToValueAtTime(261.625565,2.06)",
  "osc#14.connect(gain#11)",
  "osc#14.start(2)",
  "osc#14.stop(3.4)",
  "osc#15.detune.value=4",
  "osc#15.frequency.setValueAtTime(195.997718,2)",
  "osc#15.frequency.linearRampToValueAtTime(261.625565,2.06)",
  "osc#15.connect(gain#11)",
  "osc#15.start(2)",
  "osc#15.stop(3.4)",
  "osc#16.frequency.value=130.812783",
  "gain#17.gain.value=0.15",
  "osc#16.connect(gain#17)",
  "gain#17.connect(gain#13)",
  "osc#16.start(2)",
  "osc#16.stop(3.4)",
  "biquad#12.Q.value=3",
  "gain#13.gain.setValueAtTime(0,2)",
  "gain#13.gain.linearRampToValueAtTime(1,2.12)",
  "gain#13.gain.linearRampToValueAtTime(0.7,2.42)",
  "gain#13.gain.setValueAtTime(0.7,2.5)",
  "gain#13.gain.linearRampToValueAtTime(0,3.3)",
  "gain#11.connect(biquad#12)",
  "biquad#12.connect(gain#13)",
  "gain#13.connect(gain#1)",
  "biquad#12.frequency.setValueAtTime(700,2)",
  "biquad#12.frequency.linearRampToValueAtTime(1979.898987,2.12)",
  "biquad#12.frequency.linearRampToValueAtTime(827.989899,2.42)",
  "biquad#12.frequency.setValueAtTime(827.989899,2.5)",
  "biquad#12.frequency.linearRampToValueAtTime(700,3.3)",
  "osc#18.frequency.value=5",
  "osc#18.connect(gain#19)",
  "gain#19.gain.value=48",
  "gain#19.connect(osc#14.detune)",
  "gain#19.connect(osc#15.detune)",
  "osc#18.start(2)",
  "osc#18.stop(3.4)",
]
`;

exports[`WebAudioSynthMono DSP > Default 1`] = `
[
  "gain#2.gain.value=1",
  "osc#5.detune.value=0",
  "osc#5.frequency.value=261.625565",
  "osc#5.connect(gain#2)",
  "osc#5.start(1)",
  "osc#5.stop(2)",
  "biquad#3.Q.value=4",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.02)",
  "gain#4.gain.linearRampToValueAtTime(0.5,1.22)",
  "gain#4.gain.setValueAtTime(0.5,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,1.9)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
  "biquad#3.frequency.setValueAtTime(600,1)",
  "biquad#3.frequency.linearRampToValueAtTime(2400,1.02)",
  "biquad#3.frequency.linearRampToValueAtTime(600,1.22)",
  "biquad#3.frequency.setValueAtTime(600,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(600,1.9)",
]
`;

exports[`WebAudioSynthMono DSP > Lead (unison + pitch LFO) 1`] = `
[
  "gain#2.gain.value=0.707107",
  "osc#5.detune.value=1",
  "osc#5.frequency.value=261.625565",
  "osc#5.connect(gain#2)",
  "osc#5.start(1)",
  "osc#5.stop(2.1)",
  "osc#6.detune.value=9",
  "osc#6.frequency.value=261.625565",
  "osc#6.connect(gain#2)",
  "osc#6.start(1)",
  "osc#6.stop(2.1)",
  "biquad#3.Q.value=5",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(0.8,1.01)",
  "gain#4.gain.linearRampToValueAtTime(0.56,1.16)",
  "gain#4.gain.setValueAtTime(0.56,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,2)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
  "biquad#3.frequency.setValueAtTime(1200,1)",
  "biquad#3.frequency.linearRampToValueAtTime(4800,1.01)",
  "biquad#3.frequency.linearRampToValueAtTime(1200,1.16)",
  "biquad#3.frequency.setValueAtTime(1200,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(1200,2)",
  "osc#7.frequency.value=5",
  "osc#7.connect(gain#8)",
  "gain#8.gain.value=60",
  "gain#8.connect(osc#5.detune)",
  "gain#8.connect(osc#6.detune)",
  "osc#7.start(1)",
  "osc#7.stop(2.1)",
]
`;

exports[`WebAudioSynthMono DSP > Pad (filter LFO + smoother) 1`] = `
[
  "gain#2.gain.value=0.57735",
  "osc#5.detune.value=-6",
  "osc#5.frequency.value=130.812783",
  "osc#5.connect(gain#2)",
  "osc#5.start(1)",
  "osc#5.stop(3.1)",
  "osc#6.detune.value=0",
  "osc#6.frequency.value=130.812783",
  "osc#6.connect(gain#2)",
  "osc#6.start(1)",
  "osc#6.stop(3.1)",
  "osc#7.detune.value=6",
  "osc#7.frequency.value=130.812783",
  "osc#7.connect(gain#2)",
  "osc#7.start(1)",
  "osc#7.stop(3.1)",
  "biquad#3.Q.value=2",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.4)",
  "gain#4.gain.linearRampToValueAtTime(0.8,1.9)",
  "gain#4.gain.setValueAtTime(0.8,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,3)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
  "biquad#3.frequency.setValueAtTime(800,1)",
  "biquad#3.frequency.linearRampToValueAtTime(1600,1.4)",
  "biquad#3.frequency.linearRampToValueAtTime(1040,1.9)",
  "biquad#3.frequency.setValueAtTime(1040,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(800,3)",
  "osc#8.frequency.value=0.5",
  "gain#9.gain.value=240",
  "osc#8.connect(gain#9)",
  "biquad#10.frequency.value=300",
  "biquad#10.Q.value=0.5",
  "gain#9.connect(biquad#10)",
  "biquad#10.connect(biquad#3.detune)",
  "osc#8.start(1)",
  "osc#8.stop(3.1)",
]
`;

exports[`WebAudioSynthMono DSP > amp/tremolo LFO path 1`] = `
[
  "gain#2.gain.value=1",
  "osc#5.detune.value=0",
  "osc#5.frequency.value=261.625565",
  "osc#5.connect(gain#2)",
  "osc#5.start(1)",
  "osc#5.stop(2)",
  "biquad#3.Q.value=4",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.02)",
  "gain#4.gain.linearRampToValueAtTime(0.5,1.22)",
  "gain#4.gain.setValueAtTime(0.5,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,1.9)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
  "biquad#3.frequency.setValueAtTime(600,1)",
  "biquad#3.frequency.linearRampToValueAtTime(2400,1.02)",
  "biquad#3.frequency.linearRampToValueAtTime(600,1.22)",
  "biquad#3.frequency.setValueAtTime(600,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(600,1.9)",
  "osc#6.frequency.value=2",
  "osc#6.connect(gain#7)",
  "gain#8.gain.value=0.75",
  "biquad#3.disconnect(gain#4)",
  "biquad#3.connect(gain#8)",
  "gain#8.connect(gain#4)",
  "gain#7.gain.value=0.25",
  "gain#7.connect(gain#8.gain)",
  "osc#6.start(1)",
  "osc#6.stop(2)",
]
`;

exports[`WebAudioSynthPad DSP > Default (single note) 1`] = `
[
  "osc#3.frequency.value=261.625565",
  "osc#3.detune.value=0",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0.7,1.9)",
  "gain#4.gain.setValueAtTime(0.7,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,3.5)",
  "osc#3.connect(gain#4)",
  "gain#4.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(3.6)",
]
`;

exports[`WebAudioSynthPad DSP > Default chord 1`] = `
[
  "osc#3.frequency.value=261.625565",
  "osc#3.detune.value=0",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(0.57735,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0.404145,1.9)",
  "gain#4.gain.setValueAtTime(0.404145,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,3.5)",
  "osc#3.connect(gain#4)",
  "gain#4.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(3.6)",
  "osc#5.frequency.value=329.627557",
  "osc#5.detune.value=0",
  "gain#6.gain.setValueAtTime(0,1)",
  "gain#6.gain.linearRampToValueAtTime(0.57735,1.5)",
  "gain#6.gain.linearRampToValueAtTime(0.404145,1.9)",
  "gain#6.gain.setValueAtTime(0.404145,1.5)",
  "gain#6.gain.linearRampToValueAtTime(0,3.5)",
  "osc#5.connect(gain#6)",
  "gain#6.connect(biquad#2)",
  "osc#5.start(1)",
  "osc#5.stop(3.6)",
  "osc#7.frequency.value=391.995436",
  "osc#7.detune.value=0",
  "gain#8.gain.setValueAtTime(0,1)",
  "gain#8.gain.linearRampToValueAtTime(0.57735,1.5)",
  "gain#8.gain.linearRampToValueAtTime(0.404145,1.9)",
  "gain#8.gain.setValueAtTime(0.404145,1.5)",
  "gain#8.gain.linearRampToValueAtTime(0,3.5)",
  "osc#7.connect(gain#8)",
  "gain#8.connect(biquad#2)",
  "osc#7.start(1)",
  "osc#7.stop(3.6)",
]
`;

exports[`WebAudioSynthPad DSP > Strings (pitch LFO) 1`] = `
[
  "biquad#2.frequency.cancelScheduledValues(1)",
  "biquad#2.frequency.setValueAtTime(13947.436664,1)",
  "biquad#2.frequency.linearRampToValueAtTime(13947.436664,1.8)",
  "biquad#2.frequency.linearRampToValueAtTime(13947.436664,2.3)",
  "osc#3.frequency.value=261.625565",
  "osc#3.detune.value=0",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(0.8,1.8)",
  "gain#4.gain.linearRampToValueAtTime(0.64,2.3)",
  "gain#4.gain.setValueAtTime(0.64,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,4)",
  "osc#3.connect(gain#4)",
  "gain#4.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(4.1)",
  "osc#5.frequency.value=4",
  "osc#5.connect(gain#6)",
  "gain#6.gain.value=60",
  "gain#6.connect(osc#3.detune)",
  "osc#5.start(1)",
  "osc#5.stop(4.1)",
]
`;

exports[`WebAudioSynthPad DSP > Warm (dual-osc spread + filter env + vel→filter) 1`] = `
[
  "biquad#2.frequency.cancelScheduledValues(1)",
  "biquad#2.frequency.setValueAtTime(8738.313842,1)",
  "biquad#2.frequency.linearRampToValueAtTime(17476.627685,1.3)",
  "biquad#2.frequency.linearRampToValueAtTime(10485.976611,1.7)",
  "osc#3.frequency.value=130.812783",
  "osc#3.detune.value=4",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(0.48,1.3)",
  "gain#4.gain.linearRampToValueAtTime(0.432,1.6)",
  "gain#4.gain.setValueAtTime(0.432,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,3)",
  "osc#3.connect(gain#4)",
  "gain#4.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(3.1)",
  "osc#5.frequency.value=130.812783",
  "osc#5.detune.value=-4",
  "gain#6.gain.setValueAtTime(0,1)",
  "gain#6.gain.linearRampToValueAtTime(0.48,1.3)",
  "gain#6.gain.linearRampToValueAtTime(0.432,1.6)",
  "gain#6.gain.setValueAtTime(0.432,1.5)",
  "gain#6.gain.linearRampToValueAtTime(0,3)",
  "osc#5.connect(gain#6)",
  "gain#6.connect(biquad#2)",
  "osc#5.start(1)",
  "osc#5.stop(3.1)",
]
`;

exports[`WebAudioSynthPad DSP > amp LFO path 1`] = `
[
  "osc#3.frequency.value=261.625565",
  "osc#3.detune.value=0",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0.7,1.9)",
  "gain#4.gain.setValueAtTime(0.7,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,3.5)",
  "osc#3.connect(gain#4)",
  "gain#4.connect(biquad#2)",
  "osc#3.start(1)",
  "osc#3.stop(3.6)",
  "osc#5.frequency.value=2",
  "osc#5.connect(gain#6)",
  "gain#6.gain.value=0.2",
  "gain#6.connect(gain#4.gain)",
  "osc#5.start(1)",
  "osc#5.stop(3.6)",
]
`;

exports[`WebAudioSynthPoly DSP > Default (dual osc + key track + filter env) 1`] = `
[
  "gain#5.gain.value=0.7",
  "gain#5.connect(gain#2)",
  "osc#6.detune.value=0",
  "osc#6.frequency.value=261.625565",
  "osc#6.connect(gain#5)",
  "osc#6.start(1)",
  "osc#6.stop(2)",
  "gain#7.gain.value=0.5",
  "gain#7.connect(gain#2)",
  "osc#8.detune.value=8",
  "osc#8.frequency.value=261.625565",
  "osc#8.connect(gain#7)",
  "osc#8.start(1)",
  "osc#8.stop(2)",
  "biquad#3.Q.value=3",
  "biquad#3.frequency.setValueAtTime(1400,1)",
  "biquad#3.frequency.linearRampToValueAtTime(3959.797975,1.02)",
  "biquad#3.frequency.linearRampToValueAtTime(1911.959595,1.32)",
  "biquad#3.frequency.setValueAtTime(1911.959595,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(1400,1.9)",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.01)",
  "gain#4.gain.linearRampToValueAtTime(0.6,1.31)",
  "gain#4.gain.setValueAtTime(0.6,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,1.9)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
]
`;

exports[`WebAudioSynthPoly DSP > Default chord 1`] = `
[
  "gain#5.gain.value=0.7",
  "gain#5.connect(gain#2)",
  "osc#6.detune.value=0",
  "osc#6.frequency.value=261.625565",
  "osc#6.connect(gain#5)",
  "osc#6.start(1)",
  "osc#6.stop(2)",
  "gain#7.gain.value=0.5",
  "gain#7.connect(gain#2)",
  "osc#8.detune.value=8",
  "osc#8.frequency.value=261.625565",
  "osc#8.connect(gain#7)",
  "osc#8.start(1)",
  "osc#8.stop(2)",
  "biquad#3.Q.value=3",
  "biquad#3.frequency.setValueAtTime(1400,1)",
  "biquad#3.frequency.linearRampToValueAtTime(3959.797975,1.02)",
  "biquad#3.frequency.linearRampToValueAtTime(1911.959595,1.32)",
  "biquad#3.frequency.setValueAtTime(1911.959595,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(1400,1.9)",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(0.57735,1.01)",
  "gain#4.gain.linearRampToValueAtTime(0.34641,1.31)",
  "gain#4.gain.setValueAtTime(0.34641,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,1.9)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
  "gain#12.gain.value=0.7",
  "gain#12.connect(gain#9)",
  "osc#13.detune.value=0",
  "osc#13.frequency.value=329.627557",
  "osc#13.connect(gain#12)",
  "osc#13.start(1)",
  "osc#13.stop(2)",
  "gain#14.gain.value=0.5",
  "gain#14.connect(gain#9)",
  "osc#15.detune.value=8",
  "osc#15.frequency.value=329.627557",
  "osc#15.connect(gain#14)",
  "osc#15.start(1)",
  "osc#15.stop(2)",
  "biquad#10.Q.value=3",
  "biquad#10.frequency.setValueAtTime(1500.482848,1)",
  "biquad#10.frequency.linearRampToValueAtTime(4244.006386,1.02)",
  "biquad#10.frequency.linearRampToValueAtTime(2049.187555,1.32)",
  "biquad#10.frequency.setValueAtTime(2049.187555,1.5)",
  "biquad#10.frequency.linearRampToValueAtTime(1500.482848,1.9)",
  "gain#11.gain.setValueAtTime(0,1)",
  "gain#11.gain.linearRampToValueAtTime(0.57735,1.01)",
  "gain#11.gain.linearRampToValueAtTime(0.34641,1.31)",
  "gain#11.gain.setValueAtTime(0.34641,1.5)",
  "gain#11.gain.linearRampToValueAtTime(0,1.9)",
  "gain#9.connect(biquad#10)",
  "biquad#10.connect(gain#11)",
  "gain#11.connect(gain#1)",
  "gain#19.gain.value=0.7",
  "gain#19.connect(gain#16)",
  "osc#20.detune.value=0",
  "osc#20.frequency.value=391.995436",
  "osc#20.connect(gain#19)",
  "osc#20.start(1)",
  "osc#20.stop(2)",
  "gain#21.gain.value=0.5",
  "gain#21.connect(gain#16)",
  "osc#22.detune.value=8",
  "osc#22.frequency.value=391.995436",
  "osc#22.connect(gain#21)",
  "osc#22.start(1)",
  "osc#22.stop(2)",
  "biquad#17.Q.value=3",
  "biquad#17.frequency.setValueAtTime(1580.550167,1)",
  "biquad#17.frequency.linearRampToValueAtTime(4470.470964,1.02)",
  "biquad#17.frequency.linearRampToValueAtTime(2158.534326,1.32)",
  "biquad#17.frequency.setValueAtTime(2158.534326,1.5)",
  "biquad#17.frequency.linearRampToValueAtTime(1580.550167,1.9)",
  "gain#18.gain.setValueAtTime(0,1)",
  "gain#18.gain.linearRampToValueAtTime(0.57735,1.01)",
  "gain#18.gain.linearRampToValueAtTime(0.34641,1.31)",
  "gain#18.gain.setValueAtTime(0.34641,1.5)",
  "gain#18.gain.linearRampToValueAtTime(0,1.9)",
  "gain#16.connect(biquad#17)",
  "biquad#17.connect(gain#18)",
  "gain#18.connect(gain#1)",
]
`;

exports[`WebAudioSynthPoly DSP > Fat_Bass (sub + glide, second note) 1`] = `
[
  "gain#14.gain.value=0.7",
  "gain#14.connect(gain#11)",
  "osc#15.detune.value=0",
  "osc#15.frequency.setValueAtTime(48.999429,2)",
  "osc#15.frequency.linearRampToValueAtTime(65.406391,2.04)",
  "osc#15.connect(gain#14)",
  "osc#15.start(2)",
  "osc#15.stop(2.8)",
  "gain#16.gain.value=0.4",
  "gain#16.connect(gain#11)",
  "osc#17.detune.value=5",
  "osc#17.frequency.setValueAtTime(48.999429,2)",
  "osc#17.frequency.linearRampToValueAtTime(65.406391,2.04)",
  "osc#17.connect(gain#16)",
  "osc#17.start(2)",
  "osc#17.stop(2.8)",
  "osc#18.frequency.value=32.703196",
  "gain#19.gain.value=0.6",
  "osc#18.connect(gain#19)",
  "gain#19.connect(gain#11)",
  "osc#18.start(2)",
  "osc#18.stop(2.8)",
  "biquad#12.Q.value=6",
  "biquad#12.frequency.setValueAtTime(378.929142,2)",
  "biquad#12.frequency.linearRampToValueAtTime(2143.546925,2.005)",
  "biquad#12.frequency.linearRampToValueAtTime(378.929142,2.185)",
  "biquad#12.frequency.setValueAtTime(378.929142,2.5)",
  "biquad#12.frequency.linearRampToValueAtTime(378.929142,2.7)",
  "gain#13.gain.setValueAtTime(0,2)",
  "gain#13.gain.linearRampToValueAtTime(1,2.005)",
  "gain#13.gain.linearRampToValueAtTime(0.6,2.205)",
  "gain#13.gain.setValueAtTime(0.6,2.5)",
  "gain#13.gain.linearRampToValueAtTime(0,2.7)",
  "gain#11.connect(biquad#12)",
  "biquad#12.connect(gain#13)",
  "gain#13.connect(gain#1)",
]
`;

exports[`WebAudioSynthPoly DSP > Super_Saw (unison + dual LFO) 1`] = `
[
  "gain#5.gain.value=0.3",
  "gain#5.connect(gain#2)",
  "osc#6.detune.value=-11",
  "osc#6.frequency.value=261.625565",
  "osc#6.connect(gain#5)",
  "osc#6.start(1)",
  "osc#6.stop(2.2)",
  "osc#7.detune.value=-3.666667",
  "osc#7.frequency.value=261.625565",
  "osc#7.connect(gain#5)",
  "osc#7.start(1)",
  "osc#7.stop(2.2)",
  "osc#8.detune.value=3.666667",
  "osc#8.frequency.value=261.625565",
  "osc#8.connect(gain#5)",
  "osc#8.start(1)",
  "osc#8.stop(2.2)",
  "osc#9.detune.value=11",
  "osc#9.frequency.value=261.625565",
  "osc#9.connect(gain#5)",
  "osc#9.start(1)",
  "osc#9.stop(2.2)",
  "gain#10.gain.value=0.3",
  "gain#10.connect(gain#2)",
  "osc#11.detune.value=-11",
  "osc#11.frequency.value=261.625565",
  "osc#11.connect(gain#10)",
  "osc#11.start(1)",
  "osc#11.stop(2.2)",
  "osc#12.detune.value=-3.666667",
  "osc#12.frequency.value=261.625565",
  "osc#12.connect(gain#10)",
  "osc#12.start(1)",
  "osc#12.stop(2.2)",
  "osc#13.detune.value=3.666667",
  "osc#13.frequency.value=261.625565",
  "osc#13.connect(gain#10)",
  "osc#13.start(1)",
  "osc#13.stop(2.2)",
  "osc#14.detune.value=11",
  "osc#14.frequency.value=261.625565",
  "osc#14.connect(gain#10)",
  "osc#14.start(1)",
  "osc#14.stop(2.2)",
  "biquad#3.Q.value=2",
  "biquad#3.frequency.setValueAtTime(2200,1)",
  "biquad#3.frequency.linearRampToValueAtTime(4400,1.02)",
  "biquad#3.frequency.linearRampToValueAtTime(3080,1.42)",
  "biquad#3.frequency.setValueAtTime(3080,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(2200,2.1)",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(0.9,1.02)",
  "gain#4.gain.linearRampToValueAtTime(0.63,1.42)",
  "gain#4.gain.setValueAtTime(0.63,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,2.1)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
  "osc#15.frequency.value=5",
  "osc#15.connect(gain#16)",
  "gain#16.gain.value=720",
  "gain#16.connect(biquad#3.detune)",
  "osc#15.start(1)",
  "osc#15.stop(2.2)",
  "osc#17.frequency.value=0.4",
  "osc#17.connect(gain#18)",
  "gain#18.gain.value=60",
  "gain#18.connect(osc#6.detune)",
  "gain#18.connect(osc#7.detune)",
  "gain#18.connect(osc#8.detune)",
  "gain#18.connect(osc#9.detune)",
  "gain#18.connect(osc#11.detune)",
  "gain#18.connect(osc#12.detune)",
  "gain#18.connect(osc#13.detune)",
  "gain#18.connect(osc#14.detune)",
  "osc#17.start(1)",
  "osc#17.stop(2.2)",
]
`;

exports[`WebAudioSynthPoly DSP > Wobble (tempo-synced filter LFO) 1`] = `
[
  "gain#5.gain.value=0.7",
  "gain#5.connect(gain#2)",
  "osc#6.detune.value=0",
  "osc#6.frequency.value=65.406391",
  "osc#6.connect(gain#5)",
  "osc#6.start(1)",
  "osc#6.stop(1.9)",
  "gain#7.gain.value=0.5",
  "gain#7.connect(gain#2)",
  "osc#8.detune.value=-1194",
  "osc#8.frequency.value=65.406391",
  "osc#8.connect(gain#7)",
  "osc#8.start(1)",
  "osc#8.stop(1.9)",
  "osc#9.frequency.value=32.703196",
  "gain#10.gain.value=0.5",
  "osc#9.connect(gain#10)",
  "gain#10.connect(gain#2)",
  "osc#9.start(1)",
  "osc#9.stop(1.9)",
  "biquad#3.Q.value=8",
  "biquad#3.frequency.setValueAtTime(600,1)",
  "biquad#3.frequency.linearRampToValueAtTime(600,1.01)",
  "biquad#3.frequency.linearRampToValueAtTime(600,1.31)",
  "biquad#3.frequency.setValueAtTime(600,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(600,1.8)",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(1,1.01)",
  "gain#4.gain.linearRampToValueAtTime(1,1.31)",
  "gain#4.gain.setValueAtTime(1,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,1.7)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
  "osc#11.frequency.value=2.133333",
  "osc#11.connect(gain#12)",
  "gain#12.gain.value=1680",
  "gain#12.connect(biquad#3.detune)",
  "osc#11.start(1)",
  "osc#11.stop(1.9)",
]
`;

exports[`WebAudioSynthPoly DSP > noise + bandpass path 1`] = `
[
  "gain#5.gain.value=0.7",
  "gain#5.connect(gain#2)",
  "osc#6.detune.value=0",
  "osc#6.frequency.value=130.812783",
  "osc#6.connect(gain#5)",
  "osc#6.start(1)",
  "osc#6.stop(2)",
  "gain#7.gain.value=0.5",
  "gain#7.connect(gain#2)",
  "osc#8.detune.value=8",
  "osc#8.frequency.value=130.812783",
  "osc#8.connect(gain#7)",
  "osc#8.start(1)",
  "osc#8.stop(2)",
  "gain#10.gain.value=0.5",
  "bufsrc#9.connect(gain#10)",
  "gain#10.connect(gain#2)",
  "bufsrc#9.start(1)",
  "bufsrc#9.stop(2)",
  "biquad#3.Q.value=3",
  "biquad#3.frequency.setValueAtTime(1137.153355,1)",
  "biquad#3.frequency.linearRampToValueAtTime(3216.355394,1.02)",
  "biquad#3.frequency.linearRampToValueAtTime(1552.993763,1.32)",
  "biquad#3.frequency.setValueAtTime(1552.993763,1.5)",
  "biquad#3.frequency.linearRampToValueAtTime(1137.153355,1.9)",
  "gain#4.gain.setValueAtTime(0,1)",
  "gain#4.gain.linearRampToValueAtTime(0.8,1.01)",
  "gain#4.gain.linearRampToValueAtTime(0.48,1.31)",
  "gain#4.gain.setValueAtTime(0.48,1.5)",
  "gain#4.gain.linearRampToValueAtTime(0,1.9)",
  "gain#2.connect(biquad#3)",
  "biquad#3.connect(gain#4)",
  "gain#4.connect(gain#1)",
]
`;
